--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "dotenv": "^15.0.0",
     "global": "^4.4.0",
     "qs": "^6.10.3",
     "react": "^17.0.2",
