--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^15.0.0",
     "global": "^4.4.0",
+    "jquery": "^3.6.0",
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
@@ -26,7 +27,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
