--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1069.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
@@ -31,6 +32,7 @@
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
