--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
-#  servlet:
-#    context-path: /haejwoing
+  servlet:
+    context-path: i6c103.p.ssafy.io/api
 
 spring:
   datasource:
