--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,4 @@
 REACT_APP_GOOGLE=162813412572-93j68nvs116vi6qongc7re9o85glq28f.apps.googleusercontent.com
 REACT_APP_NAVER=7dJ6XRg_9yMFTdRAvXEE
 REACT_APP_KAKAO=b4d91f6b872ed9cc94673ef40c3cd88b
+REACT_APP_S3=ap-northeast-2:e812a597-ca5d-4e15-bb00-dbf788e31f86
