--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,14 +1,17 @@
 server:
   port: 8080
-  servlet:
-    context-path: /api
+#  servlet:
+#    context-path: /haejwoing
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
-    username: haejwoing
-    password: 1234
+    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
+    username: root
+    password: root
+#    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
+#    username: haejwoing
+#    password: 1234
   servlet:
     multipart:
       location: C:\Users\multicampus\Desktop\공통프로젝트\branch\backend\S06P12C103\back\src\main\resources
