--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/haejwoing?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
     username: root
-    password: 1q2w3e4r@
+    password: root
 #    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
 #    username: haejwoing
 #    password: 1234
