--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-kakao-login": "^2.1.0",
     "react-lodash": "^0.1.2",
     "react-naver-login": "^0.1.4",
