--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -7,13 +7,10 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-    url: jdbc:mysql://localhost:3305/haejwoing?serverTimezone=Asia/Seoul
+
+    url: jdbc:mysql://localhost:3307/haejwoing?serverTimezone=Asia/Seoul
     username: root
-<<<<<<< Updated upstream
-    password: wkfkek3730**
-=======
-    password: chae6343!@#
->>>>>>> Stashed changes
+    password: 1q2w3e4r@
 
 
 #    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
