--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
