--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-    url: jdbc:mysql://localhost:3305/haejwoing?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
     username: root
-    password: wkfkek3730**
+    password: root
 
 
 #    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
