--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -13,9 +13,10 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+
     url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
     username: root
-    password: root
+    password: chae6343!@#
 
 
 #    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
