--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,27 +1,17 @@
 server:
   port: 8080
-#  servlet:
-#    context-
-    #ㄹㅇㅋㅋ
-    #프로필사진
-    #홍길동
-    #분 전
-  # 5
-  #ㄹㅇㅋㅋpath: /haejwoing
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+#    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
+#    username: root
+#    password: root
 
-    url: jdbc:mysql://localhost:3307/haejwoing?serverTimezone=Asia/Seoul
-    username: root
-    password: 1q2w3e4r@
-
-
-#    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
-#    username: ha ejwoing
-#    password: 1234
+    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
+    username: haejwoing
+    password: 1234
 
 
 mybatis:
