--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
 
     url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
     username: root
-    password: chae6343!@#
+    password: root
+
 
 #    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
 #    username: haejwoing
