--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -5,14 +5,14 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
-    username: root
-    password: root
+#    url: jdbc:mysql://localhost:3306/haejwoing?serverTimezone=Asia/Seoul
+#    username: root
+#    password: root
 
 
-#    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
-#    username: haejwoing
-#    password: 1234
+    url: jdbc:mysql://i6c103.p.ssafy.io/haejwoing
+    username: haejwoing
+    password: 1234
 
 
 mybatis:
